--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,62 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background-color: #cad1cd;
+
+}
+
+.about-bitacora {
+  background-color: #fff;
+  border-radius: 13px;
+  box-shadow: 0px 3px 7px 0px rgba(113, 113, 114, 0.86);
+  font-family: 'Raleway', sans-serif;
+  padding: 1em 2em 3em;
+  margin-top: 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.about-bitacora p {
+  font-size: 1.5rem;
+  font-family: 'Caveat', cursive;
+}
+
+.media-box, .event-box, .img-selected, .box-message {
+  background-color: #fff;
+  border-radius: 12px;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.media-box p, .event-box, .img-selected, .box-message {
+  font-family: 'Caveat', cursive;
+  font-size: 2rem;
+}
+
 #map {
   width: 100%;
   height: 400px;
   /* background-color: grey; */
 }
+
+/* Class Modal */
+.modal-content h4 {
+  font-size: 2rem;
+}
+
+.modal {
+  height: 85vh;
+}
+
+.video {
+  width: 40%;
+}
+
